--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">TunerStudio</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+<!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="Accept">OKEY</string>
+    <string name="title_activity_metronomo">Metronomo</string>
+    <string name="title_activity_pantalla_carga">PantallaCarga</string>
 </resources>
