aplicacion_version_beta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
 
     <string name="Accept">OKEY</string>
     <string name="title_activity_metronomo">Metronomo</string>
-    <string name="title_activity_pantalla_carga">PantallaCarga</string>
+    <string name="title_activity_pantalla_carga">Tuner Studio</string>
 </resources>
